--- a/app/src/main/res/layout/fragment_shoe.xml
+++ b/app/src/main/res/layout/fragment_shoe.xml
@@ -9,7 +9,7 @@
             name="shoe"
             type="com.udacity.shoestore.models.Shoe" />
 
-        <variable
+       <variable
             name="viewModel"
             type="com.udacity.shoestore.shoeList.ShoeSharedVM" />
 
@@ -19,6 +19,7 @@
         android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/ic_pixel_2"
         tools:context=".shoeList.ShoeFragment">
 
         <ImageView
@@ -110,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:onClick="@{() -> viewModel.addShoe(shoe)}"
+            android:onClick="@{() -> viewModel.addShoe()}"
             android:text="Save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
